<resources>
    <string name="app_name">MapUp Assessment</string>

    <string name="permissions_required">Permissions required</string>
    <string name="request_again">Request again</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="granted_permissions">Granted: %s</string>
    <string name="android_tracking">Android Location Tracking</string>
    <string name="total_session">Total Sessions</string>
    <string name="total_distance">Total Distance</string>
    <string name="track_stop">Tracking Stopped</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="session_history">Session History</string>
    <string name="ok">Ok</string>
    <string name="theme_toggle">Theme toggle</string>
    <string name="fetchTollData">Fetch Toll Detail</string>

</resources>