<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp"
    android:background="@color/colorBackground">

<!--    <org.osmdroid.views.MapView-->
<!--        android:id="@+id/mapView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_tracking"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/_12sdp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorOnBackground"
        app:cardCornerRadius="@dimen/_10sdp">
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/theme_toggle_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_toggle"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/total_sessions_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/total_distance_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_session"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/total_session_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/total_distance_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            android:layout_marginStart="@dimen/_6sdp"
            app:cardBackgroundColor="@color/colorOnBackground"
            app:layout_constraintStart_toEndOf="@+id/total_sessions_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_distance"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary"/>

                <TextView
                    android:id="@+id/total_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardCornerRadius="16dp"
        app:cardElevation="1dp"
        app:cardBackgroundColor="@color/colorOnBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_stop"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/textPrimary"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <Button
                    android:id="@+id/btnStartStop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:text="@string/start_tracking"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSessionHistory"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSessionHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:text="@string/session_history"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnStartStop"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>